--- a/src/cr_poverty/config/processing_config.yaml
+++ b/src/cr_poverty/config/processing_config.yaml
@@ -1,28 +1,312 @@
-# Transformation parameters
-IMPUTE_CUSTAGE: 40
-MAX_AGE: 99
-MAX_ASSETS: 1000000
-IMPUTE_YEARSMEMBER: 25
-NON_RESPONSE_RATIO: 4
+# id variables
+#id_
+ID_COLS:
+  - "Id"
+  - "idhogar"
+  - "Target"
 
-# Flag to enable undersampling to be applied to the silver data (so that the distribution)
-# of the minority (positive class) is artifically set to 0.20
-PERFORM_INITIAL_DOWNSAMPLING: False
+# boolean variables at the individual level
+# ind_bool
+IND_BOOL_COLS:
+  - "v18q"
+  - "dis"
+  - "male"
+  - "female"
+  - "estadocivil1"
+  - "estadocivil2"
+  - "estadocivil3"
+  - "estadocivil4"
+  - "estadocivil5"
+  - "estadocivil6"
+  - "estadocivil7"
+  - "parentesco1"
+  - "parentesco2"
+  - "parentesco3"
+  - "parentesco4"
+  - "parentesco5"
+  - "parentesco6"
+  - "parentesco7"
+  - "parentesco8"
+  - "parentesco9"
+  - "parentesco10"
+  - "parentesco11"
+  - "parentesco12"
+  - "instlevel1"
+  - "instlevel2"
+  - "instlevel3"
+  - "instlevel4"
+  - "instlevel5"
+  - "instlevel6"
+  - "instlevel7"
+  - "instlevel8"
+  - "instlevel9"
+  - "mobilephone"
 
-# A minimum percentage threshold below which levels will combined to 'Others'
-RARE_LEVEL_MIN_PCT_THRESHOLD: 3.0
 
-# Defines the sampling strategy to be used by the Random Under Sampling method
-# E.g. 0.5 means that after applying random under samping, the number of samples in the minority class
-# will be 50% of majority class.
-RANDOM_UNDER_SAMPLING_STRATEGY: 0.5
+# Ordinal variables at the individual level
+# ind_ordered
+IND_ORDERED_COLS:
+  - "rez_esc"
+  - "escolari"
+  - "age"
 
-# Oversample the minority class to X proportion of the overall sample
-SMOTE_OVER_SAMPLING_STRATEGY: 0.1 
+# Boolean variables at the household level
+# hh_bool
+HH_BOOL_COLS:
+  - "hacdor"
+  - "hacapo"
+  - "v14a"
+  - "refrig"
+  - "paredblolad"
+  - "paredzocalo"
+  - "paredpreb"
+  - "pisocemento"
+  - "pareddes"
+  - "paredmad"
+  - "paredzinc"
+  - "paredfibras"
+  - "paredother"
+  - "pisomoscer"
+  - "pisoother"
+  - "pisonatur"
+  - "pisonotiene"
+  - "pisomadera"
+  - "techozinc"
+  - "techoentrepiso"
+  - "techocane"
+  - "techootro"
+  - "cielorazo"
+  - "abastaguadentro"
+  - "abastaguafuera"
+  - "abastaguano"
+  - "public"
+  - "planpri"
+  - "noelec"
+  - "coopele"
+  - "sanitario1"
+  - "sanitario2"
+  - "sanitario3"
+  - "sanitario5"
+  - "sanitario6"
+  - "energcocinar1"
+  - "energcocinar2"
+  - "energcocinar3"
+  - "energcocinar4"
+  - "elimbasu1"
+  - "elimbasu2"
+  - "elimbasu3"
+  - "elimbasu4"
+  - "elimbasu5"
+  - "elimbasu6"
+  - "epared1"
+  - "epared2"
+  - "epared3"
+  - "etecho1"
+  - "etecho2"
+  - "etecho3"
+  - "eviv1"
+  - "eviv2"
+  - "eviv3"
+  - "tipovivi1"
+  - "tipovivi2"
+  - "tipovivi3"
+  - "tipovivi4"
+  - "tipovivi5"
+  - "computer"
+  - "television"
+  - "lugar1"
+  - "lugar2"
+  - "lugar3"
+  - "lugar4"
+  - "lugar5"
+  - "lugar6"
+  - "area1"
+  - "area2"
+  - "v2a1_missing"
 
-# Types of SMOTE to try
-SMOTES_TO_TRY:
-  - SMOTE
-  - BorderlineSMOTE
-  - ADASYN
+# Ordinal variables at the household level
+# hh_ordered
+HH_ORDERED_COLS:
+  - "rooms"
+  - "r4h1"
+  - "r4h2"
+  - "r4h3"
+  - "r4m1"
+  - "r4m2"
+  - "r4m3"
+  - "r4t1"
+  - "r4t2"
+  - "r4t3"
+  - "v18q1"
+  - "tamhog"
+  - "tamviv"
+  - "hhsize"
+  - "hogar_nin"
+  - "hogar_adul"
+  - "hogar_mayor"
+  - "hogar_total"
+  - "bedrooms"
+  - "qmobilephone"
 
+# Continuous variables at the household level
+# hh_cont
+HH_CONT_COLS:
+  - "v2a1"
+  - "dependency"
+  - "edjefe"
+  - "edjefa"
+  - "meaneduc"
+  - "overcrowding"
+
+# squared variables
+#sqr_
+SQR_COLS:
+  - "SQBescolari"
+  - "SQBage"
+  - "SQBhogar_total"
+  - "SQBedjefe"
+  - "SQBhogar_nin"
+  - "SQBovercrowding"
+  - "SQBdependency"
+  - "SQBmeaned"
+  - "agesq"
+
+#redundant_household_vars
+REDUNDANT_HH_COLS:
+  - "tamhog"
+  - "hogar_total"
+  - "r4t3"
+
+#redundant_elec_vars
+REDUNDANT_ELEC_COLS:
+  - noelec
+  - coopele
+  - public
+  - planpri
+
+# aggregated features (from individual features) that are selected
+#selected_ind_agg_features
+SELECTED_IND_AGG_FEATURES:
+  - "v18q-min"
+  - "v18q-sum"
+  - "v18q-count"
+  - "v18q-std"
+  - "v18q-range_"
+  - "dis-min"
+  - "dis-max"
+  - "dis-sum"
+  - "female-min"
+  - "female-max"
+  - "female-sum"
+  - "female-std"
+  - "female-range_"
+  - "estadocivil1-min"
+  - "estadocivil1-max"
+  - "estadocivil1-sum"
+  - "estadocivil2-min"
+  - "estadocivil2-max"
+  - "estadocivil2-std"
+  - "estadocivil3-min"
+  - "estadocivil3-max"
+  - "estadocivil3-std"
+  - "estadocivil4-min"
+  - "estadocivil4-max"
+  - "estadocivil5-min"
+  - "estadocivil5-max"
+  - "estadocivil5-sum"
+  - "estadocivil6-min"
+  - "estadocivil6-max"
+  - "estadocivil7-min"
+  - "estadocivil7-max"
+  - "estadocivil7-sum"
+  - "estadocivil7-std"
+  - "parentesco1-min"
+  - "parentesco1-max"
+  - "parentesco1-std"
+  - "parentesco2-min"
+  - "parentesco2-max"
+  - "parentesco2-std"
+  - "parentesco3-min"
+  - "parentesco3-max"
+  - "parentesco3-sum"
+  - "parentesco4-min"
+  - "parentesco4-max"
+  - "parentesco4-sum"
+  - "parentesco5-min"
+  - "parentesco5-max"
+  - "parentesco6-min"
+  - "parentesco6-max"
+  - "parentesco6-sum"
+  - "parentesco7-min"
+  - "parentesco7-max"
+  - "parentesco8-min"
+  - "parentesco8-max"
+  - "parentesco9-min"
+  - "parentesco9-max"
+  - "parentesco9-sum"
+  - "parentesco10-min"
+  - "parentesco10-max"
+  - "parentesco11-min"
+  - "parentesco11-max"
+  - "parentesco11-sum"
+  - "parentesco12-min"
+  - "parentesco12-max"
+  - "parentesco12-sum"
+  - "instlevel1-min"
+  - "instlevel1-max"
+  - "instlevel1-sum"
+  - "instlevel2-min"
+  - "instlevel2-max"
+  - "instlevel2-sum"
+  - "instlevel2-std"
+  - "instlevel3-min"
+  - "instlevel3-max"
+  - "instlevel3-sum"
+  - "instlevel3-std"
+  - "instlevel4-min"
+  - "instlevel4-max"
+  - "instlevel4-sum"
+  - "instlevel4-std"
+  - "instlevel5-min"
+  - "instlevel5-max"
+  - "instlevel5-sum"
+  - "instlevel6-min"
+  - "instlevel6-max"
+  - "instlevel7-min"
+  - "instlevel7-max"
+  - "instlevel8-min"
+  - "instlevel8-max"
+  - "instlevel8-sum"
+  - "instlevel8-std"
+  - "instlevel9-min"
+  - "instlevel9-max"
+  - "mobilephone-min"
+  - "mobilephone-std"
+  - "mobilephone-range_"
+  - "rez_esc-min"
+  - "rez_esc-max"
+  - "escolari-min"
+  - "escolari-max"
+  - "escolari-sum"
+  - "escolari-std"
+  - "escolari-range_"
+  - "age-min"
+  - "age-max"
+  - "age-sum"
+  - "age-std"
+  - "age-range_"
+  - "inst-max"
+  - "inst-std"
+  - "inst-range_"
+  - "escolari_normalized_by_age-min"
+  - "escolari_normalized_by_age-max"
+  - "escolari_normalized_by_age-sum"
+  - "escolari_normalized_by_age-std"
+  - "escolari_normalized_by_age-range_"
+  - "inst_normalized_by_age-max"
+  - "inst_normalized_by_age-std"
+  - "inst_normalized_by_age-range_"
+  - "tech-min"
+  - "tech-sum"
+  - "tech-std"
+  - "tech-range_"
