--- a/src/cr/config/general_config.yaml
+++ b/src/cr/config/general_config.yaml
@@ -1,7 +1,9 @@
 
 RANDOM_STATE: 42
 
+TRAIN_DATA_TIME_PERIOD: 1
+
 DATABRICKS_WORKSPACE_URL: "/Users/henryhfung4_gmail.com#ext#@henryhfung4gmail.onmicrosoft.com/"
 
 # True if running on Databricks workspace; False if running via databricks-connect
-RUN_ON_DATABRICKS_WS: True
+RUN_ON_DATABRICKS_WS: False
